--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -59,12 +59,34 @@
 }
 .header-heading h1 {
   font-size: 4rem;
-  margin: 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation:  typing 3.5s steps(35,end), blink-caret 0.5s step-end infinite;
   margin-top: -40px;
   margin-bottom: 30px;
   letter-spacing: 2px;
   color: #fffb00;
 }
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+
 .header-btns {
   display: flex;
   margin-top: 40px;
@@ -80,7 +102,7 @@
   background-color: #ffffff;
   box-shadow: 5px 10px 30px rgba(255, 255, 255, 0.336);
   border-radius: 5px;
-  color: #2a2a2a;
+  color: #4c4c4c;
 }
 .header-btn:hover {
   background-color: transparent;
