--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -61,7 +61,7 @@
   font-size: 4rem;
   overflow: hidden;
   white-space: nowrap;
-  margin: 0 auto;
+  margin: 0px;
   animation:  typing 3.5s steps(35,end), blink-caret 0.5s step-end infinite;
   margin-top: -40px;
   margin-bottom: 30px;
@@ -127,6 +127,9 @@
     top: 58%;
   }
 
+  .header-heading h1 {
+    white-space: initial;
+  }
   .header-heading h2 {
     font-size: 2.8rem;
   }
